--- a/src/input/content/pages/guestbook.njk
+++ b/src/input/content/pages/guestbook.njk
@@ -7,12 +7,13 @@ eleventyNavigation:
 ---
 
 <aside class="callout">
-	<sl-icon name="info-circle" library="default"></sl-icon>
+	{%- inlineIcon "fas:circle-info" -%}
 	<strong>
 		<p>This page displays entries sent via Webmention!</p>
 	</strong>
 	<div>
-		<p>If you want to sign the guestbook send through a Webmention, either from your website or you <strong>can reply to this <a href="https://front-end.social/@elly/110143472326627842">toot over on Mastodon</a></strong>.</p>
+		<p>If you want to sign the guestbook send through a Webmention, either from your website or you <strong>can reply to this <a href="https://front-end.social/@elly/110143472326627842">toot over on Mastodon</a>
+			</strong>.</p>
 	</div>
 </aside>
 
