--- a/src/_includes/stage.njk
+++ b/src/_includes/stage.njk
@@ -1,4 +1,4 @@
-{%- set icon -%}
+{%- set icon -%}fas:
 {%- if stage === "seedling" -%}seedling{%- endif -%}
 {%- if stage === "budding" -%}spa{%- endif -%}
 {%- if stage === "evergreen" -%}tree{%- endif -%}
@@ -6,8 +6,10 @@
 {%- if stage === "complete" -%}circle-check{%- endif -%}
 {%- endset -%}
 
+{%- set stage -%}
+{{ stage | title }}
+{%- endset -%}
+
 <span>
-	<sl-tooltip content="{{ stage | title }}">
-		<sl-icon class="[ inline-icon ]" library="fa" name="fas-{{ icon }}" label="{{ stage | title }}"></sl-icon>
-	</sl-tooltip>
+	{%- labelledInlineIcon icon, { "aria-label": stage } -%}
 </span>
