--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -34,35 +34,35 @@ eleventyImport:
 						<summary>I'm a <span class="[ p-role ]">front-end developer/designer and accessibility specialist</span> with a strong interest in and passion for...</summary>
 						<ul role="list" class="[ flow ]">
 							<li>
-								<sl-icon class="[ inline-icon ]" library="fa" name="fab-html5"></sl-icon>
+								{%- inlineIcon "fab:html5" -%}
 								<abbr title="HyperText Markup Language">HTML</abbr>
 							</li>
 							<li>
-								<sl-icon class="[ inline-icon ]" library="fa" name="fab-css3-alt"></sl-icon>
+								{%- inlineIcon "fab:css3-alt" -%}
 								<abbr title="Cascading Style Sheets">CSS</abbr>
 							</li>
 							<li>
-								<sl-icon class="[ inline-icon ]" library="fa" name="fas-universal-access"></sl-icon>
+								{%- inlineIcon "fas:universal-access" -%}
 								<abbr title="Accessibility">A11y</abbr>
 							</li>
 							<li>
-								<sl-icon class="[ inline-icon ]" library="fa" name="fas-pen-nib"></sl-icon>
+								{%- inlineIcon "fas:pen-nib" -%}
 								<abbr title="Scalable Vector Graphics">SVG</abbr>
 							</li>
 							<li>
-								<sl-icon class="[ inline-icon ]" library="fa" name="fas-code"></sl-icon>
+								{%- inlineIcon "fas:code" -%}
 								Web Standards
 							</li>
 							<li>
-								<sl-icon class="[ inline-icon ]" library="fa" name="fas-gears"></sl-icon>
+								{%- inlineIcon "fas:gears" -%}
 								Design Tokens
 							</li>
 							<li>
-								<sl-icon class="[ inline-icon ]" library="fa" name="fas-cubes"></sl-icon>
+								{%- inlineIcon "fas:cubes" -%}
 								Design Systems
 							</li>
 							<li>
-								<sl-icon class="[ inline-icon ]" library="fa" name="fas-cube"></sl-icon>
+								{%- inlineIcon "fas:cube" -%}
 								Web Components
 							</li>
 						</ul>
@@ -107,6 +107,12 @@ eleventyImport:
 					<a href="https://elly.to/linkedin" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
 						{%- inlineIcon "fab:linkedin" -%}
 						<span>LinkedIn</span>
+					</a>
+				</li>
+				<li>
+					<a href="https://elly.to/github" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">
+						{%- inlineIcon "fab:github" -%}
+						<span>GitHub</span>
 					</a>
 				</li>
 				<li>
