--- a/src/input/content/pages/mastodon.njk
+++ b/src/input/content/pages/mastodon.njk
@@ -51,9 +51,10 @@ eleventyNavigation:
 					<div class="[ feed-item-card-footer ]">
 						<sl-tooltip content="Posted on {{ post.isoDate | dateToLocaleDateFull }}">
 							<span class="[ flex align-center gap-1ch ]">
-								<sl-icon class="[ inline-icon ]" library="fa" name="far-calendar" label="Posted on {{ post.isoDate | dateToLocaleDateFull }}"></sl-icon>
+								{%- set label -%}Posted on {{ post.isoDate | dateToLocaleDateFull }}{%- endset -%}
+								{%- labelledInlineIcon "far:calendar", { "aria-label": label } -%}
 								<a href="{{ post.link }}" class="[ u-url u-syndication ]" rel="syndication">
-									<time class="[ dt-published ]" datetime="{{ post.isoDate }}" style="line-height: 1;">{{ post.isoDate | dateToRelative }}</time>
+									<time class="[ dt-published ]" datetime="{{ post.isoDate }}" style="line-height: 1;">{{ post.isoDate | dateToLocaleDateFull }}</time>
 								</a>
 							</span>
 						</sl-tooltip>
