--- a/src/input/css/blocks/toc.css
+++ b/src/input/css/blocks/toc.css
@@ -32,7 +32,7 @@
 			}
 
 			& h2 {
-				font-size: var(--font-size-fluid-1);
+				font-size: var(--font-size-4);
 			}
 
 			&:is(:hover, :focus-visible) sl-icon {
