Replacing sl-icon

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,6 +1,6 @@
 <header class="[ site-head ] [ wrapper ]" style="--wrapper-size: 100ch;">
 	<div class="[ inner ]">
-		<div class="[ flex align-center gap-3 ]">
+		<div>
 			<!-- link to home: http://microformats.org/wiki/rel-home -->
 			<a href="/" rel="home" class="[ u-url u-uid ] [ text-decoration-none ]"{% if page.url === "/" %} data-state="active" aria-current="page"{% endif %}>
 				<span class="[ logo ]" aria-hidden="true" title="Elly">
