--- a/src/input/css/blocks/site-head.css
+++ b/src/input/css/blocks/site-head.css
@@ -3,50 +3,58 @@
 	z-index: 1;
 
 	.inner {
-		> div > button {
-			all: unset;
-			/* stylelint-disable-next-line order/properties-alphabetical-order */
+		> div {
 			align-items: center;
-			background-color: transparent;
-			border-radius: var(--radius-2);
-			color: var(--link);
-			cursor: pointer;
+			column-gap: var(--size-3);
 			display: flex;
-			font-weight: var(--font-weight-body-bold);
-			gap: 1ch;
-			margin-left: calc(var(--size-1) * -1);
-			margin-right: calc(var(--size-1) * -1);
-			outline-offset: 0;
-			padding-block: 0;
-			padding-left: var(--size-1);
-			padding-right: var(--size-1);
-			transition: background-color 200ms var(--ease-2);
+			flex-wrap: wrap;
+			row-gap: var(--size-2);
 
-			&:hover {
-				background-color: var(--accent-bg);
-				text-decoration-color: transparent;
-			}
-
-			&:active {
-				background-color: var(--accent-bg-hover);
-			}
-
-			&:focus-visible {
-				outline: 2px solid var(--link);
+			> button {
+				all: unset;
+				/* stylelint-disable-next-line order/properties-alphabetical-order */
+				align-items: center;
+				background-color: transparent;
+				border-radius: var(--radius-2);
+				color: var(--link);
+				cursor: pointer;
+				display: flex;
+				font-weight: var(--font-weight-body-bold);
+				gap: 1ch;
+				margin-left: calc(var(--size-1) * -1);
+				margin-right: calc(var(--size-1) * -1);
 				outline-offset: 0;
-			}
+				padding-block: 0;
+				padding-left: var(--size-1);
+				padding-right: var(--size-1);
+				transition: background-color 200ms var(--ease-2);
 
-			&:not(:active):focus-visible {
-				outline-offset: var(--size-1);
-			}
+				&:hover {
+					background-color: var(--accent-bg);
+					text-decoration-color: transparent;
+				}
 
-			@media (prefers-reduced-motion: no-preference) {
+				&:active {
+					background-color: var(--accent-bg-hover);
+				}
+
 				&:focus-visible {
-					transition: outline-offset 145ms var(--ease-2);
+					outline: 2px solid var(--link);
+					outline-offset: 0;
 				}
 
 				&:not(:active):focus-visible {
-					transition-duration: 0.25s;
+					outline-offset: var(--size-1);
+				}
+
+				@media (prefers-reduced-motion: no-preference) {
+					&:focus-visible {
+						transition: outline-offset 145ms var(--ease-2);
+					}
+
+					&:not(:active):focus-visible {
+						transition-duration: 0.25s;
+					}
 				}
 			}
 		}
@@ -63,6 +71,6 @@
 	}
 
 	& .nav {
-		padding: var(--size-2) 0;
+		padding: var(--size-3) 0;
 	}
 }
