--- a/src/input/css/blocks/callout.css
+++ b/src/input/css/blocks/callout.css
@@ -7,7 +7,7 @@
 	padding-inline: var(--size-5);
 	position: relative;
 
-	& > sl-icon {
+	> .inline-icon {
 		background-color: var(--accent-bg-subtle);
 		border-radius: var(--radius-round);
 		color: var(--accent-border);
@@ -17,12 +17,12 @@
 		top: -14px;
 	}
 
-	& > strong {
+	> strong {
 		font-size: var(--font-size-3);
 		line-height: 1;
 	}
 
-	& > div > *:first-child {
+	> div > *:first-child {
 		margin-block-start: var(--size-3);
 	}
 }
