--- a/src/input/content/bookmarks/bookmark.njk
+++ b/src/input/content/bookmarks/bookmark.njk
@@ -32,7 +32,13 @@ permalink: "bookmarks/{{ bookmark.title | slugify }}/"
 	{% include "youtube.njk" %}
 {%- else -%}
 	<a href="{{ bookmark.link }}" class="[ u-bookmark-of h-cite ] [ flex flex-col gap-1 padding-2 ]">
-		<h2>Link to {{ bookmark.type }}</h2>
+		{%- if bookmark.type === "article" -%}
+			<h2>Read article</h2>
+		{%- elif bookmark.type === "video" or bookmark.tags | includes("YouTube") -%}
+			<h2>Watch video</h2>
+		{%- else -%}
+			<h2>View link</h2>
+		{%- endif -%}
 		<picture>
 			<source media="(prefers-color-scheme: dark)" srcset="https://api.microlink.io?url={{ bookmark.link }}&screenshot=true&colorScheme=dark&meta=false&embed=screenshot.url">
 			<source media="(prefers-color-scheme: light)" srcset="https://api.microlink.io?url={{ bookmark.link }}&screenshot=true&colorScheme=light&meta=false&embed=screenshot.url">
