--- a/src/_includes/hidden-microformats.njk
+++ b/src/_includes/hidden-microformats.njk
@@ -9,6 +9,7 @@
 	<a rel="syndication" class="[ u-syndication ]" href="{{ syndication-url }}" hidden=""></a>
 {% endif %}
 <a href="https://brid.gy/publish/mastodon" class="p-bridgy-omit-link" hidden=""></a>
+<a href="https://brid.gy/publish/bluesky" class="p-bridgy-omit-link" hidden=""></a>
 <p class="p-bridgy-mastodon-content" hidden="">{{ title }} 
 	{%- if bookmark.link -%}
 		<br> 🔖 {{ bookmark.link }}
