--- a/src/_includes/hidden-microformats.njk
+++ b/src/_includes/hidden-microformats.njk
@@ -10,7 +10,7 @@
 {% endif %}
 <a href="https://brid.gy/publish/mastodon" class="p-bridgy-omit-link" hidden=""></a>
 <a href="https://brid.gy/publish/bluesky" class="p-bridgy-omit-link" hidden=""></a>
-<p class="p-bridgy-mastodon-content" hidden="">{{ title }} 
+<p class="p-bridgy-mastodon-content p-bridgy-bluesky-content" hidden="">{{ title }} 
 	{%- if bookmark.link -%}
 		<br> 🔖 {{ bookmark.link }}
 	{%- endif -%}
