Remove question marks from webmention names, emojis come through as question marks for some reason

--- a/src/_includes/webmention.njk
+++ b/src/_includes/webmention.njk
@@ -2,7 +2,7 @@
 	<div class="[ meta ]">
 		{% if mention.author %}
 			<a href="{{ mention.author.url }}" class="[ author-wrapper ]">
-				<strong class="[ author-name ]">{{ mention.author.name }}</strong>
+				<strong class="[ author-name ]">{{ mention.author.name | replace("?", "") }}</strong>
 			</a>
 		{% else %}
 			<span class="[ author-wrapper ]">
