Fixing mastodon share link

--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -95,7 +95,7 @@ This post hasn't been updated a long time, so it might be kinda crusty.
 <footer class="[ content-footer ][ flow flow-space-setter ]" style="--flow-space-setter: var(--size-8);" data-pagefind-ignore>
 	<div class="[ share ]">
 		<p>
-			{%- inlineIcon "fas:share-from-square" -%} Share on <a href='https://toot.kytta.dev/?text="{{ title }}" by @ellyloel@front-end.social {{ metadata.url }}{{ page.url }}' class="[ text-decoration-none move-link-styling-to-child ]">
+			{%- inlineIcon "fas:share-from-square" -%} Share on <a href='https://toot.kytta.dev/?text="{{ title }}" by @elly@front-end.social {{ metadata.url }}{{ page.url }}' class="[ text-decoration-none move-link-styling-to-child ]">
 				{%- inlineIcon "fab:mastodon" -%}
 				<span>Mastodon</span></a>, <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ metadata.url }}{{ page.url }}" class="[ text-decoration-none move-link-styling-to-child ]">
 				{%- inlineIcon "fab:linkedin" -%}
