Fixing question marks thing again, properly this time

--- a/src/_includes/webmentions-facepile.njk
+++ b/src/_includes/webmentions-facepile.njk
@@ -8,7 +8,7 @@
 				and
 			{% endif %}
 			<a href="{{ facepileMention.author.url }}">
-				{{- facepileMention.author.name -}}
+				{{- facepileMention.author.name | replace("?", "") -}}
 			</a>
 			{%- if not loop.last and loop.length !== 2 -%}
 				,
