--- a/src/input/css/global.css
+++ b/src/input/css/global.css
@@ -191,6 +191,7 @@ var {
 	padding-inline: var(--size-1);
 	text-decoration: underline;
 	text-decoration-color: currentcolor;
+	text-decoration-thickness: 0.1em;
 	transition-duration: 200ms;
 	transition-property: background-color, text-decoration-color;
 	transition-timing-function: var(--ease-2);
