--- a/src/input/css/utilities/typography.css
+++ b/src/input/css/utilities/typography.css
@@ -11,6 +11,7 @@
 		text-decoration: underline;
 		text-decoration-color: currentcolor;
 		text-decoration-skip-ink: auto;
+		text-decoration-thickness: 0.1em;
 		transition-duration: 200ms;
 		transition-property: background-color, text-decoration-color;
 		transition-timing-function: var(--ease-2);
