Fixing search page

--- a/src/input/content/pages/search.njk
+++ b/src/input/content/pages/search.njk
@@ -17,7 +17,7 @@ eleventyNavigation:
 			<button type="submit" class="search-btn btn-form">Search</button>
 		</div>
 	</div>
-	<p><small>Search provided by{% " " %}<is-land><a href="https://duckduckgo.com/">DuckDuckGo</a><template data-island="replace"><a href="https://pagefind.app/">Pagefind</a></template></is-land>.</small></p>
+	<p><small>Search provided by{{ " " }}<is-land><a href="https://duckduckgo.com/">DuckDuckGo</a><template data-island="replace"><a href="https://pagefind.app/">Pagefind</a></template></is-land>.</small></p>
 </form>
 <div id="search-results" class="[ hide flow ]">
 	<h2 id="search-results-count" aria-live="polite">Results</h2>
