--- a/src/input/css/blocks/breadcrumb.css
+++ b/src/input/css/blocks/breadcrumb.css
@@ -14,7 +14,7 @@ nav[aria-label="Breadcrumb"] ol {
 			margin: 0;
 			outline-offset: 0;
 			transition-duration: 145ms;
-			transition-property: color;
+			transition-property: color, background-color;
 			transition-timing-function: var(--ease-2);
 
 			&:hover {
@@ -27,12 +27,7 @@ nav[aria-label="Breadcrumb"] ol {
 			}
 
 			@media (prefers-reduced-motion: no-preference) {
-				transition-property: color, outline-offset;
-			}
-
-			/* stylelint-disable-next-line selector-not-notation */
-			&:not([data-state="active"]):not(:hover, :focus-visible) {
-				text-decoration: underline;
+				transition-property: color, background-color, outline-offset;
 			}
 
 			&[data-state="active"] {
