--- a/src/input/content/pages/mastodon.njk
+++ b/src/input/content/pages/mastodon.njk
@@ -49,15 +49,12 @@ eleventyNavigation:
 						</details>
 					{%- endif -%}
 					<div class="[ feed-item-card-footer ]">
-						<sl-tooltip content="Posted on {{ post.isoDate | dateToLocaleDateFull }}">
-							<span class="[ flex align-center gap-1ch ]">
-								{%- set label -%}Posted on {{ post.isoDate | dateToLocaleDateFull }}{%- endset -%}
-								{%- labelledInlineIcon "far:calendar", { "aria-label": label } -%}
-								<a href="{{ post.link }}" class="[ u-url u-syndication ]" rel="syndication">
-									<time class="[ dt-published ]" datetime="{{ post.isoDate }}" style="line-height: 1;">{{ post.isoDate | dateToLocaleDateFull }}</time>
-								</a>
-							</span>
-						</sl-tooltip>
+						<span class="[ flex align-center gap-1ch ]">
+							{%- labelledInlineIcon "far:calendar", { "aria-label": "Posted on" } -%}
+							<a href="{{ post.link }}" class="[ u-url u-syndication ]" rel="syndication">
+								<time class="[ dt-published ]" datetime="{{ post.isoDate }}" style="line-height: 1;">{{ post.isoDate | dateToLocaleDateFull }}</time>
+							</a>
+						</span>
 					</div>
 				</div>
 			</div>
