--- a/src/_layouts/base-without-header.njk
+++ b/src/_layouts/base-without-header.njk
@@ -17,7 +17,7 @@
 			{%- rollup "src/input/js/model-viewer.js" | url -%}
 			{%- rollup "src/input/js/spotify.js" | url -%}
 		{%- endif -%}
-		{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/til/" or page.url === "/til/d3/" or page.url === "/archive/" -%}
+		{%- if page.url === "/bookmarks/" or page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/til/" or page.url === "/til/d3/" or page.url === "/archive/" -%}
 			{%- rollup "src/input/js/graph.js" | url -%}
 		{%- endif -%}
 		{%- if page.url === "/search/" -%}
