--- a/src/input/content/pages/garden.njk
+++ b/src/input/content/pages/garden.njk
@@ -23,22 +23,9 @@ eleventyImport:
 </h2>
 <div id="graph"></div>
 
+{%- include "crazy-filter.njk" -%}
+
 {%- set notes = collections.GardenSortedByDate -%}
-
-{# {%- set seedlingCount = 0 -%}
-{%- set buddingCount = 0 -%}
-{%- set evergreenCount = 0 -%}
-
-{%- for note in notes -%}
-	{%- if note.data.stage === "seedling" -%}
-		{%- set seedlingCount = seedlingCount + 1 -%}
-	{%- elif note.data.stage === "budding" -%}
-		{%- set buddingCount = buddingCount + 1 -%}
-	{%- elif note.data.stage === "evergreen" -%}
-		{%- set evergreenCount = evergreenCount + 1 -%}
-	{%- endif -%}
-{%- endfor -%} #}
-
 <ul id="feed" class="[ feed ]">
 	{%- for note in notes -%}
 		{%- if note.data.archived !== true -%}
@@ -50,10 +37,12 @@ eleventyImport:
 			{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
 			{%- if note.data.image -%}
 				{%- setAsync "imageMarkup" -%}
-				{%- image note.data.image, "" -%}
+				<svg viewBox="0 0 200 150" width="200" height="150">
+					{%- set randomNumber -%}{%- random 0, 1 -%}{%- endset -%}
+					<image class="image" xlink:href="{{ note.data.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
+				</svg>
 				{%- endsetAsync -%}
 			{%- endif -%}
-			{# {%- set body = note.data.page.excerpt -%} #}
 			{%- set date = note.data.date -%}
 			{%- set label = "" -%}
 			{%- if note.data.modified -%}
