--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -182,9 +182,12 @@ eleventyImport:
 		</div>
 	</article>
 
+	{%- include "crazy-filter.njk" -%}
+
 	{%- feedBlock title = "Recent posts" -%}
 	{%- set recentPosts = collections.allSortedByDate | limit(10) -%}
 	{%- for post in recentPosts -%}
+		{%- set headingLevel = 3 -%}
 		{%- if post.data.stage -%}
 			{%- set stage = post.data.stage -%}
 		{%- endif -%}
@@ -193,10 +196,12 @@ eleventyImport:
 		{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
 		{%- if post.data.image -%}
 			{%- setAsync "imageMarkup" -%}
-			{%- image post.data.image, "" -%}
+			<svg viewBox="0 0 200 150" width="200" height="150">
+				{%- set randomNumber -%}{%- random 0, 1 -%}{%- endset -%}
+				<image class="image" xlink:href="{{ post.data.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
+			</svg>
 			{%- endsetAsync -%}
 		{%- endif -%}
-		{# {%- set body = post.data.page.excerpt -%} #}
 		{%- set date = post.data.date -%}
 		{%- set label = "" -%}
 		{%- if post.data.modified -%}
