--- a/src/input/content/pages/til.njk
+++ b/src/input/content/pages/til.njk
@@ -12,6 +12,8 @@ eleventyImport:
 </h2>
 <div id="graph"></div>
 
+{%- include "crazy-filter.njk" -%}
+
 {% set til = collections.TILSortedByDate %}
 <ul id="feed" class="[ feed ]">
 	{%- for post in til %}
@@ -20,10 +22,12 @@ eleventyImport:
 		{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
 		{%- if post.data.image -%}
 			{%- setAsync "imageMarkup" -%}
-			{%- image post.data.image, "" -%}
+			<svg viewBox="0 0 200 150" width="200" height="150">
+				{%- set randomNumber -%}{%- random 0, 1 -%}{%- endset -%}
+				<image class="image" xlink:href="{{ post.data.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
+			</svg>
 			{%- endsetAsync -%}
 		{%- endif -%}
-		{# {%- set body = post.data.page.excerpt -%} #}
 		{%- set date = post.data.date -%}
 		{%- set label = "" -%}
 		{%- if post.data.modified -%}
