--- a/src/input/css/blocks/markdown-container.css
+++ b/src/input/css/blocks/markdown-container.css
@@ -23,16 +23,14 @@
 			border-width: var(--border-size-2);
 			box-shadow: var(--shadow-offset) var(--shadow-offset) 0 0
 				var(--accent-bg-hover);
-			inline-size: fit-content;
-			justify-content: center;
+			inline-size: min(var(--size-content-3), 95%);
 			margin-inline: auto;
-			padding-block: var(--size-8);
-			padding-inline: var(--size-8);
+			padding-block: var(--size-4);
+			padding-inline: var(--size-4);
 			transition: box-shadow 0.3s var(--ease-1), opacity 0.5s var(--ease-2);
 
-			:is(&, &.share > p) {
-				font-size: var(--font-size-4);
-				max-inline-size: unset;
+			&.share > p {
+				font-size: var(--font-size-3);
 			}
 
 			&:is(:hover, :focus-within) {
@@ -42,18 +40,8 @@
 			}
 		}
 
-		& > .share {
-			padding-block: var(--size-8);
-			padding-inline: var(--size-8);
-		}
-
-		& > .post-pagination {
-			padding-block: var(--size-3);
-			padding-inline: var(--size-3);
-
-			& > p:last-of-type {
-				text-align: right;
-			}
+		> .post-pagination > p:last-of-type {
+			text-align: right;
 		}
 	}
 }
