--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -95,13 +95,13 @@ This post hasn't been updated a long time, so it might be kinda crusty.
 <footer class="[ content-footer ][ flow flow-space-setter ]" style="--flow-space-setter: var(--size-8);" data-pagefind-ignore>
 	<div class="[ share ]">
 		<p>
-			{%- inlineIcon "fas:share-from-square" -%} Share on <a href='https://toot.kytta.dev/?text="{{ title }}" by @elly@front-end.social {{ metadata.url }}{{ page.url }}' class="[ text-decoration-none move-link-styling-to-child ]">
-				{%- inlineIcon "fab:mastodon" -%}
-				<span>Mastodon</span></a>, <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ metadata.url }}{{ page.url }}" class="[ text-decoration-none move-link-styling-to-child ]">
-				{%- inlineIcon "fab:linkedin" -%}
-				<span>LinkedIn</span></a> or <a href='https://twitter.com/intent/tweet?url={{ metadata.url }}{{ page.url }}&text="{{ title }}" by @ellyloel' class="[ text-decoration-none move-link-styling-to-child ]">
-				{%- inlineIcon "fab:twitter" -%}
-				<span>Twitter</span></a>.
+			{%- inlineIcon "fas:share-from-square" -%} Share on <wbr><a href='https://toot.kytta.dev/?text="{{ title }}" by @elly@front-end.social {{ metadata.url }}{{ page.url }}' class="[ text-decoration-none move-link-styling-to-child ]">
+			{%- inlineIcon "fab:mastodon" -%}
+			<span>Mastodon</span></a>, <wbr><a href="https://www.linkedin.com/sharing/share-offsite/?url={{ metadata.url }}{{ page.url }}" class="[ text-decoration-none move-link-styling-to-child ]">
+			{%- inlineIcon "fab:linkedin" -%}
+			<span>LinkedIn</span></a> <wbr>or <wbr><a href='https://twitter.com/intent/tweet?url={{ metadata.url }}{{ page.url }}&text="{{ title }}" by @ellyloel' class="[ text-decoration-none move-link-styling-to-child ]">
+			{%- inlineIcon "fab:twitter" -%}
+			<span>Twitter</span></a>.
 		</p>
 	</div>
 	{# These are flipped because we want next to be newer and prev to be older, the opposite of the collections sorting. #}
