--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -18,10 +18,23 @@ eleventyImport:
 			<span aria-hidden="true">I like creating <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">delightful</span>, <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">magical</span>, and <span class="stroke" style="--color: var(--accent-solid); --thickness: 1.5px;">accessible</span> art with code<span style="color: var(--accent-solid);">.</span></span>
 		</h1>
 		<div id="lego" class="[ lego-container ]">
-			<model-viewer loading="lazy" alt="A 3D modeled Lego Minifigure designed to look like myself." src="/assets/3d/me.gltf" camera-controls disable-pan disable-zoom shadow-intensity="0" exposure="0.75" shadow-softness="1" camera-orbit="31.49deg 78.9deg 98.24m" field-of-view="30deg">
-				<img id="poster" src="/assets/img/poster.webp" alt="">
-				<div class="progress-bar" slot="progress-bar"></div>
-			</model-viewer>
+			<is-land on:interaction="click,focusin">
+				<template data-island>
+					{%- rollup "src/input/js/model-viewer.js" | url -%}
+					<script type="module">
+						document.querySelector(`#lego script[src*="model-viewer"]`).onload = function () {
+							const modelViewer = document?.querySelector("model-viewer");
+							modelViewer.onblur = function () {
+								modelViewer.removeAttribute("tabindex");
+							};
+						};
+					</script>
+				</template>
+				<model-viewer tabindex="0" loading="eager" alt="A 3D modeled Lego Minifigure designed to look like myself." src="/assets/3d/me.gltf" camera-controls disable-pan disable-zoom shadow-intensity="0" exposure="0.75" shadow-softness="1" camera-orbit="31.49deg 78.9deg 98.24m" field-of-view="30deg">
+					<img id="poster" src="/assets/img/poster.webp" alt="A 3D modeled Lego Minifigure designed to look like myself.">
+					<div class="progress-bar" slot="progress-bar"></div>
+				</model-viewer>
+			</is-land>
 		</div>
 	</header>
 
